--- a/tweets/templates/tweets/post_list.html
+++ b/tweets/templates/tweets/post_list.html
@@ -2,7 +2,16 @@
 <head>
     <title>Entry Page</title>
 </head>
-<p>
-    Howdy
-</p>
+<div>
+    <h1><a href="/">Django Girls Blog</a></h1>
+</div>
+
+{% for post in posts %}
+    <div>
+        <p>published date: {{ post.published_date }}</p>
+        <h1><a href="">{{ post.title }}</a></h1>
+        <p>{{ post.text|linebreaksbr }}</p>
+    </div>
+{% endfor %}
+
 </html>
