--- a/tweets/static/css/tweets.css
+++ b/tweets/static/css/tweets.css
@@ -1,3 +1,23 @@
 h1 a{
     color: #35fc45;
+    font-family: 'Lobster';
+}
+
+body{
+    padding-left: 20px;
+}
+
+.header{
+    background-color: azure;
+    margin-top: 2;
+    padding: 20px 10px 20px 10px;
+}
+
+.post{
+    font-size: 14pt;
+    text-decoration: none;
+}
+
+.post h1 a, .post a:visited{
+    color: #000000;
 }
