--- a/tweets/templates/tweets/post_list.html
+++ b/tweets/templates/tweets/post_list.html
@@ -1,13 +1,18 @@
 <html>
+{% load staticfiles %}
 <head>
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+    <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="{% static 'css/tweets.css' %}">
     <title>Entry Page</title>
 </head>
-<div>
-    <h1><a href="/">Django Girls Blog</a></h1>
+<div class="header">
+    <h1><a href="/">Django Blog</a></h1>
 </div>
 
 {% for post in posts %}
-    <div>
+    <div class="post">
         <p>published date: {{ post.published_date }}</p>
         <h1><a href="">{{ post.title }}</a></h1>
         <p>{{ post.text|linebreaksbr }}</p>
